# Aerodrome-Substreams

./: .gitignore  ANALYSIS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  aerodrome-substreams-v0.1.0.spkg  aerodrome-substreams-v0.1.1.spkg  buf.gen 2.yaml  push_to_github.sh  schema.clickhouse.sql  schema.sql  substreams.yaml
abi/: pool.json
docs/: DEPLOYMENT.md  SUBSTREAMS_DEV.md
examples/: README.md  sample_output.json
proto/: aerodrome.proto
src/: lib.rs  stores.rs
src/abi/: mod.rs
src/pb/: .last_generated_hash  aerodrome.rs  mod.rs
